--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testImplementation 'com.codeborne:selenide:5.12.0'
     testImplementation "io.qameta.allure:allure-selenide:${allureVersion}"
     testImplementation 'ch.qos.logback:logback-classic:1.2.3'
+    testImplementation 'net.lingala.zip4j:zip4j:1.3.2'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
