--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     testImplementation "io.qameta.allure:allure-selenide:${allureVersion}"
     testImplementation 'ch.qos.logback:logback-classic:1.2.3'
     testImplementation 'net.lingala.zip4j:zip4j:1.3.2'
+    testImplementation 'com.codeborne:pdf-test:1.5.1'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
